FP-18: Still cleaning up some of the css so that things actually show up on the page. I fixed some of the font sizes to match the style guidelines on Figma, but most of my changes are ad-hoc, stop gap measures. I'd suggest an entire ticket devoted to cleaning it up. It's at least to a point where I can implement the new history component.

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -1,4 +1,14 @@
 /***  Variables  ***/
+/*** Re: Style Guidelines on Figma ***/
+h1 {
+  font-size: 48;
+}
+h2 {
+  font-size: 36;
+}
+h3 {
+  font-size: 24;
+}
 /*** COMPONENTS  ***/
 .NavHeader {
   display: flex;
@@ -547,7 +557,7 @@
   margin-left: 2rem;
   margin-right: 2rem;
   margin-bottom: 0rem;
-  font-size: 48px;
+  font-size: 36px;
   color: white;
 }
 .CaseDetails__LeftSideHead h3 {
@@ -626,42 +636,43 @@
   color: #cdcdcd;
 }
 .CaseDetails__RightSide {
-  width: 50%;
-  margin-left: 10%;
+  width: 45%;
 }
 .Rightside__Head {
   margin: 1rem;
   margin-left: 4rem;
   margin-bottom: 0rem;
-  font-size: 30px;
+  font-size: 36px;
 }
 .Rightside__Header {
   color: #cdcdcd;
-  font-size: 48px;
+  font-size: 36px;
   margin-bottom: 0rem;
 }
 .Rightside__SearchBar {
   /* width: 150%; */
   display: flex;
   flex-flow: row nowrap;
-  align-items: center;
-  margin-right: 1rem;
+  align-items:center;
+  justify-content: space-between;
+  /* margin-right: 1rem; */
+  width: 100%;
 }
 .Rightside__SearchBar img {
-  margin-bottom: 1rem;
-  margin-right: 1rem;
+  height: 20px;
+  margin-bottom: .5rem;
+  /* margin-right: 0.5rem; */
 }
 .Rightside__SearchBar h3 {
   color: #d2d2d7;
   opacity: 0.5;
-  font-size: 36px;
+  font-size: 24px;
 }
 .SearchBar {
   background-color: black;
   height: 2rem;
-  width: 30rem;
-  margin-left: 1rem;
-  margin-bottom: 0.5rem;
+  /* margin-left: 1rem;
+  margin-bottom: 0.5rem; */
   border: 2px solid #cdcdcd;
   border-radius: 20px 0px 10px;
   color: #cdcdcd;
@@ -669,6 +680,7 @@
 .SearchBar > .ant-input {
   background-color: black;
   color: #cdcdcd;
+  width: 100%;
 }
 .ant-input-prefix {
   margin-top: 1rem;
@@ -719,6 +731,7 @@
 }
 .Rightside__PreviousNotes h3 {
   color: #cdcdcd;
+  font-size: 24px;
 }
 .Rightside__PreviousNotes p {
   color: #cdcdcd;
@@ -823,7 +836,7 @@ td.ant-table-column-sort {
 .ant-card-body {
   /* background-color: #262626; */
   border-radius: 50px 10px;
-  width: fit-content;
+  width: 100%;
 }
 .ant-card-bordered {
   background-color: #101010;
